add status codes to api responses
