# internal/http-server/handlers/segments/save.go
@@ -36,6 +36,8 @@ type SegmentSaver interface {
 // @Produce json
 // @Param request body SaveRequest true "Request body"
 // @Success 200 {object} SaveResponse
+// @Failure 400 {object} SaveResponse
+// @Failure 500 {object} SaveResponse
 // @Router /segments [post]
 func NewSegmentSaver(log *slog.Logger, segmentSaver SegmentSaver) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
@@ -52,12 +54,14 @@ func NewSegmentSaver(log *slog.Logger, segmentSaver SegmentSaver) http.HandlerFu
 		if errors.Is(err, io.EOF) {
 			log.Error("request body is empty")
 
+			render.Status(r, http.StatusBadRequest)
 			render.JSON(w, r, response.Error("empty request"))
 			return
 		}
 		if err != nil {
 			log.Error("failed to decode request body", sl.Err(err))
 
+			render.Status(r, http.StatusBadRequest)
 			render.JSON(w, r, response.Error("failed to decode request"))
 			return
 		}
@@ -69,6 +73,7 @@ func NewSegmentSaver(log *slog.Logger, segmentSaver SegmentSaver) http.HandlerFu
 
 			log.Error("invalid request", sl.Err(err))
 
+			render.Status(r, http.StatusBadRequest)
 			render.JSON(w, r, response.ValidationError(validateErr))
 			return
 		}
@@ -77,12 +82,14 @@ func NewSegmentSaver(log *slog.Logger, segmentSaver SegmentSaver) http.HandlerFu
 		if errors.Is(err, storage.ErrSegmentExists) {
 			log.Info("segment already exists", slog.String("name", req.Name))
 
+			render.Status(r, http.StatusBadRequest)
 			render.JSON(w, r, response.Error("segment already exists"))
 			return
 		}
 		if err != nil {
 			log.Error("failed to create segment", sl.Err(err))
 
+			render.Status(r, http.StatusInternalServerError)
 			render.JSON(w, r, response.Error("failed to create segment"))
 			return
 		}
